# covalent_docking

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/covalent_docking/: batch_ligand.py  covalent_docking.py  covalent_docking.sh  post_docking.py
tests/: run.sh
