[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "covalent_docking"
version = "0.0.1"
authors = [
    {name="FEI YUAN", email="fei.yuan@bcm.edu"},
    {name="Chong Lu", email="chong.lu@bcm.edu"},
]
description = "A pipeline for perform covalent docking in an easy and smart way"
readme = "README.md"
requires-python = ">=3.9"
license = {text = 'MIT'}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'cmder',
    'loguru',
]
[tool.flit.module]
name = 'covalent_docking'

[tool.setuptools.package-data]
"*" = ["*.sh"]

[project.scripts]
batch-ligand = "covalent_docking.batch_ligand:main"
covalent-docking = "covalent_docking.covalent_docking:main"
post-docking = "covalent_docking.post_docking:main"
